fixed some layout issues

--- a/tweetout/static/css/gumby.css
+++ b/tweetout/static/css/gumby.css
@@ -1857,13 +1857,13 @@ html, body { background-color: #ccc; background-image: url(../img/tweetout_web_1
 
 #bg { position: fixed; top: 0; left: 0; /* Preserve aspet ratio */ min-width: 100%; min-height: 100%; }
 
-.column, .columns, .tiles > li { -webkit-transition-duration: .3s; -moz-transition-duration: .3s; -o-transition-duration: .3s; -ms-transition-duration: .3s; transition-duration: .3s; }
+.column, .columns, .tiles > li { -moz-transition-duration: .3s; -o-transition-duration: .3s; -ms-transition-duration: .3s; transition-duration: .3s; }
 
-.column:hover, .columns:hover { cursor: pointer; -webkit-transition-duration: .3s; -moz-transition-duration: .3s; -o-transition-duration: .3s; -ms-transition-duration: .3s; transition-duration: .3s; }
+.column:hover, .columns:hover { cursor: pointer; -moz-transition-duration: .3s; -o-transition-duration: .3s; -ms-transition-duration: .3s; transition-duration: .3s; }
 
-.row { margin-bottom: 1px; text-align: center; background-color: #ffffff; -moz-transition: background-color 2s; -webkit-transition: background-color 3s; -o-transition: background-color 4s; transition: background-color 2s; }
+.row { margin-bottom: 1px; text-align: center; background-color: #ffffff; }
 
-.row .tweet-header { position: relative; background-color: #39b54a; -moz-transition: background-color 2s; -webkit-transition: background-color 2s; -o-transition: background-color 2s; transition: background-color 2s; }
+.row .tweet-header { position: relative; background-color: #39b54a; }
 
 .row.new .tweet-header { background-color: #f9d93d; }
 
@@ -1871,7 +1871,7 @@ html, body { background-color: #ccc; background-image: url(../img/tweetout_web_1
 
 .row.controls .two.columns { text-align: right; }
 
-h1, h2 { font: bold italic 60px georgia, times new roman, serif; color: #fff; letter-spacing: -.09em; -webkit-transition-duration: 1s; }
+h1, h2 { font: bold italic 60px georgia, times new roman, serif; color: #fff; letter-spacing: -.09em; }
 
 h1 a { font: bold italic 60px georgia, times new roman, serif; color: #fff; letter-spacing: -2px; }
 
@@ -1882,9 +1882,9 @@ h1.columns { border: 0px; }
 h2 { font-family: helvetica; font-size: 33px; font-style: normal; font-weight: bold; letter-spacing: 0.005rem; text-align: right; }
 h2 a, h2 a:hover { color: #fff; text-decoration: none; }
 
-p { font-size: 16px; line-height: 30px; margin-bottom: 0; color: #555; -webkit-transition-duration: .2s; -moz-transition-duration: .2s; -o-transition-duration: .2s; -ms-transition-duration: .2s; transition-duration: .2s; }
+p { font-size: 16px; line-height: 30px; margin-bottom: 0; color: #555; -moz-transition-duration: .2s; -o-transition-duration: .2s; -ms-transition-duration: .2s; transition-duration: .2s; }
 
-.column:hover p, .columns:hover p { color: #000; -webkit-transition-duration: .2s; -moz-transition-duration: .2s; -o-transition-duration: .2s; -ms-transition-duration: .2s; transition-duration: .2s; }
+.column:hover p, .columns:hover p { color: #000; -moz-transition-duration: .2s; -o-transition-duration: .2s; -ms-transition-duration: .2s; transition-duration: .2s; }
 
 .head, .head:hover { box-shadow: none; margin-top: 30px; }
 
@@ -1926,13 +1926,11 @@ h1 a:hover { text-decoration: none; }
 
 #tweetssection-tweets .btn.tweet-button { float: left; background-color: #00adee; margin: 10px 14px; height: 31px; width: 98px; border: #00adee; }
 
-#tweetssection-tweets .btn.tweet-button:hover { background-color: #0071bc; border: #0071bc; -o-transition: .5s; -ms-transition: .5s; -moz-transition: .5s; -webkit-transition: .5s; /* ...and now for the proper property */ transition: .5s; }
+#tweetssection-tweets .btn.tweet-button:hover { background-color: #0071bc; border: #0071bc; -o-transition: .5s; -ms-transition: .5s; -moz-transition: .5s; /* ...and now for the proper property */ transition: .5s; }
 
 #controlsheader .searchrow .columns { margin: 0px; }
 
-.row.controls.fixed { background-color: #ccc; width: 100%; bottom: 0%; max-width: 100%; padding-right: 10%; z-index: 99999; }
-
-.row.controls.fixed { background-color: #4D4D4D; }
+.row.controls.fixed { background-color: #4D4D4D; width: 100%; max-width: 100%; padding-right: 10%; position: fixed !important; z-index: 99999 !important; bottom: 0 !important; }
 
 .row.controls.fixed ul { margin: 5px; width: 100%; }
 
@@ -1960,7 +1958,7 @@ section#tweetssection .row.controls .btn.large.icon-right a:after, section#tweet
 /* MODAL WINDOWS */
 body { /* jank buster */ -webkit-transform: translateZ(0); }
 
-.modal { position: absolute; width: 330px; height: 277px; left: 50%; top: 100px; margin-left: -125px; padding: 1em; opacity: 0; -webkit-transition: 0.2s; -moz-transition: 0.2s; -ms-transition: 0.2s; transition: 0.2s; z-index: 9999; pointer-events: none; color: #fff; }
+.modal { position: absolute; width: 330px; height: 277px; left: 50%; top: 100px; margin-left: -125px; padding: 1em; opacity: 0; -moz-transition: 0.2s; -ms-transition: 0.2s; transition: 0.2s; z-index: 9999; pointer-events: none; color: #fff; }
 
 .modal.from-above { -webkit-transform: scale(2); -moz-transform: scale(2); -ms-transform: scale(2); transform: scale(2); }
 
@@ -2003,7 +2001,7 @@ body.home form label { color: #fff; font-size: 2rem; font-family: helvetica; tex
   #tweetssection .row.controls .btn.tweet-button { width: 64px; }
   #tweetssection .row.controls .btn.tweet-button { font-size: 11px; }
   .fixed { position: fixed; } }
-@media only screen and (max-width: 767px) { h1 { font: bold italic 100px georgia, times new roman, serif; -webkit-transition-duration: .5s; }
+@media only screen and (max-width: 767px) { h1 { font: bold italic 100px georgia, times new roman, serif; }
   .profile_img { display: none; } }
 @media only screen and (max-width: 767px) { .tweet-header { font-size: 10px; }
   .tweet-text { font-size: 12px; }
